--- a/Fire/GameApplication/imgui.ini
+++ b/Fire/GameApplication/imgui.ini
@@ -13,30 +13,27 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Component]
-ViewportPos=1318,71
-ViewportId=0xD4B39271
-Pos=0,483
-Size=315,475
+Pos=1430,335
+Size=322,656
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][System]
-ViewportPos=242,786
-ViewportId=0xCEE114BD
+Pos=242,763
 Size=1077,244
 Collapsed=0
 
 [Window][Entity]
-ViewportPos=1318,71
-ViewportId=0xD4B39271
-Size=315,481
+Pos=1430,67
+Size=322,266
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
-Pos=568,193
-Size=315,481
+Pos=1430,33
+Size=322,32
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Example: Custom rendering]
 ViewportPos=191,168
@@ -128,9 +125,11 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockNode      ID=0x00000004 Pos=1318,71 Size=315,958 Split=Y
-  DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=292,336 Split=Y Selected=0xF57F7DD5
-    DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=550,481 Selected=0xF57F7DD5
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=550,475 Selected=0x31E779E6
-  DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=292,340
+DockNode        ID=0x00000004 Pos=1430,56 Size=322,958 Split=Y
+  DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=309,32 Selected=0xE87781F4
+  DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=309,924 Split=Y
+    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=292,336 Split=Y Selected=0xF57F7DD5
+      DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=550,266 Selected=0xF57F7DD5
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=550,656 Selected=0x31E779E6
+    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=292,340
 
