--- a/Fire/ToolModule/ToolModule.vcxproj
+++ b/Fire/ToolModule/ToolModule.vcxproj
@@ -170,8 +170,7 @@
     </Link>
     <Lib />
     <Lib>
-      <AdditionalDependencies>
-      </AdditionalDependencies>
+      <AdditionalDependencies>EntityComponentSystemd.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
