--- a/Fire/GameApplication/imgui.ini
+++ b/Fire/GameApplication/imgui.ini
@@ -1,6 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=-19,104
-ViewportId=0x9F5F46A1
+Pos=280,28
 Size=400,400
 Collapsed=0
 
@@ -10,33 +9,38 @@ ViewportId=0xA4D966FE
 Pos=0,577
 Size=742,579
 Collapsed=0
-DockId=0x00000003,0
-
-[Window][Component]
-Pos=1430,358
-Size=322,656
-Collapsed=0
 DockId=0x00000005,0
 
+[Window][Component]
+ViewportPos=1419,107
+ViewportId=0xD4B39271
+Pos=0,481
+Size=392,477
+Collapsed=0
+DockId=0x00000003,0
+
 [Window][System]
-Pos=242,763
+ViewportPos=350,827
+ViewportId=0xCEE114BD
 Size=1077,244
 Collapsed=0
 
 [Window][Entity]
-Pos=1430,90
-Size=322,266
+ViewportPos=1419,107
+ViewportId=0xD4B39271
+Size=392,479
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-Pos=1430,56
-Size=322,32
+ViewportPos=1419,107
+ViewportId=0xD4B39271
+Size=392,479
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000002,1
 
 [Window][Example: Custom rendering]
-ViewportPos=191,168
+ViewportPos=193,168
 ViewportId=0x3AC84485
 Size=531,414
 Collapsed=0
@@ -120,16 +124,55 @@ Pos=60,60
 Size=430,450
 Collapsed=0
 
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=341,176
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
+
+[Window][DockSpace Demo]
+Pos=0,24
+Size=1077,682
+Collapsed=0
+
 [Table][0xD181190E,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x64418101,3]
+RefScale=18
+Column 0  Width=55
+Column 1  Width=55
+Column 2  Width=55
+
+[Table][0x49F8DCEA,3]
+RefScale=18
+Column 0  Weight=1.0000
+Column 1  Width=108
+Column 2  Width=162
+
+[Table][0xDA36A7E0,6]
+RefScale=18
+Column 0  Width=30 Sort=0v
+Column 1  Width=52
+Column 2  Width=76
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x20DF7A63,4]
+RefScale=18
+Column 0  Width=30 Sort=0v
+Column 1  Width=52
+Column 2  Width=42
+Column 3  Weight=1.0000
+
 [Docking][Data]
-DockNode        ID=0x00000004 Pos=1430,56 Size=322,958 Split=Y
-  DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=309,32 Selected=0xE87781F4
-  DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=309,924 Split=Y
-    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=292,336 Split=Y Selected=0xF57F7DD5
-      DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=550,266 Selected=0xF57F7DD5
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=550,656 Selected=0x31E779E6
-    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=292,340
+DockNode      ID=0x00000004 Pos=1419,107 Size=392,958 Split=Y
+  DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=392,266 Split=Y Selected=0xF57F7DD5
+    DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=392,479 Selected=0xF57F7DD5
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=392,477 Selected=0x31E779E6
+  DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=392,690
 
