--- a/Fire/GameApplication/imgui.ini
+++ b/Fire/GameApplication/imgui.ini
@@ -12,29 +12,24 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Component]
-ViewportPos=1429,37
-ViewportId=0xD4B39271
-Pos=0,481
+Pos=1497,511
 Size=392,477
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][System]
-ViewportPos=348,731
-ViewportId=0xCEE114BD
+Pos=348,708
 Size=1077,244
 Collapsed=0
 
 [Window][Entity]
-ViewportPos=1429,37
-ViewportId=0xD4B39271
+Pos=1497,30
 Size=392,479
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1429,37
-ViewportId=0xD4B39271
+Pos=1497,30
 Size=392,479
 Collapsed=0
 DockId=0x00000002,1
@@ -137,6 +132,16 @@ Pos=0,24
 Size=1077,682
 Collapsed=0
 
+[Window][세이브 성공]
+Pos=462,285
+Size=136,90
+Collapsed=0
+
+[Window][SaveSuccesful]
+Pos=119,251
+Size=159,90
+Collapsed=0
+
 [Table][0xD181190E,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -170,7 +175,7 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockNode      ID=0x00000004 Pos=1429,37 Size=392,958 Split=Y
+DockNode      ID=0x00000004 Pos=1497,53 Size=392,958 Split=Y
   DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=392,266 Split=Y Selected=0xF57F7DD5
     DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=392,479 Selected=0xF57F7DD5
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=392,477 Selected=0x31E779E6
