--- a/Fire/EntityComponentSystem/EntityComponentSystem.vcxproj.filters
+++ b/Fire/EntityComponentSystem/EntityComponentSystem.vcxproj.filters
@@ -23,9 +23,6 @@
     <Filter Include="ECS\Source\05.Events">
       <UniqueIdentifier>{3733a08c-907b-4acd-8a07-7dc8e3001ce2}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ECS\Source\06.Serializer">
-      <UniqueIdentifier>{8801a871-5cee-4ab7-bb85-ab980ea5b96a}</UniqueIdentifier>
-    </Filter>
     <Filter Include="ECS\Header">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
@@ -48,9 +45,6 @@
     <Filter Include="ECS\Header\05.Events">
       <UniqueIdentifier>{c92dd641-f661-44bf-bdf8-7482d834eacb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ECS\Header\06.Serializer">
-      <UniqueIdentifier>{8238afdb-5881-4658-a783-3b57e54bde20}</UniqueIdentifier>
-    </Filter>
     <Filter Include="BaseComponent">
       <UniqueIdentifier>{16c57262-52f0-43df-9949-cd6697b9e087}</UniqueIdentifier>
     </Filter>
@@ -60,14 +54,17 @@
     <Filter Include="BaseComponent\Header">
       <UniqueIdentifier>{7073f233-100c-4987-a788-ad48d508927c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="SceneManager">
+      <UniqueIdentifier>{0b38575f-565e-4edb-b734-47f8811f82dd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Serialize">
+      <UniqueIdentifier>{879deeb7-c307-4bc4-aca8-9d166ee4d29f}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Reflection">
       <UniqueIdentifier>{1877bd2d-b245-4de3-9dcb-4b70ac5ed7d9}</UniqueIdentifier>
     </Filter>
     <Filter Include="Reflection\header">
       <UniqueIdentifier>{812e422d-c8ac-488b-a62d-abb9b64b2119}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Reflection\src">
-      <UniqueIdentifier>{76adc4ad-96d4-4146-9f6e-39a181b1cd56}</UniqueIdentifier>
     </Filter>
     <Filter Include="Reflection\header\00.Define">
       <UniqueIdentifier>{1206d8db-770c-4197-8215-592c315b3d64}</UniqueIdentifier>
@@ -84,6 +81,9 @@
     <Filter Include="Reflection\header\01.TypeDescriptor">
       <UniqueIdentifier>{2d968e52-fd59-4387-9852-df13f7fa9892}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Reflection\src">
+      <UniqueIdentifier>{76adc4ad-96d4-4146-9f6e-39a181b1cd56}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Reflection\src\01.TypeDescriptor">
       <UniqueIdentifier>{b638d9a4-ca36-47bc-94b0-6c4878bf23a2}</UniqueIdentifier>
     </Filter>
@@ -95,9 +95,6 @@
     </Filter>
     <Filter Include="Reflection\src\04.Helper">
       <UniqueIdentifier>{379e8242-c408-4cff-bae7-ec921512027c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="SceneManager">
-      <UniqueIdentifier>{0b38575f-565e-4edb-b734-47f8811f82dd}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -145,12 +142,6 @@
     </ClInclude>
     <ClInclude Include="EntityIterator.h">
       <Filter>ECS\Header\02.Entity</Filter>
-    </ClInclude>
-    <ClInclude Include="IDataConverter.h">
-      <Filter>ECS\Header\06.Serializer</Filter>
-    </ClInclude>
-    <ClInclude Include="StringConverter.h">
-      <Filter>ECS\Header\06.Serializer</Filter>
     </ClInclude>
     <ClInclude Include="Name.h">
       <Filter>BaseComponent\Header</Filter>
@@ -212,8 +203,8 @@
     <ClInclude Include="StirngHelper.h">
       <Filter>Reflection\header\04.Helper</Filter>
     </ClInclude>
-    <ClInclude Include="WorldManager.h">
-      <Filter>ECS\Header</Filter>
+    <ClInclude Include="Serializer.h">
+      <Filter>Serialize</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -252,9 +243,6 @@
     </ClCompile>
     <ClCompile Include="EntityView.cpp">
       <Filter>ECS\Source\02.Entity</Filter>
-    </ClCompile>
-    <ClCompile Include="StringConverter.cpp">
-      <Filter>ECS\Source\06.Serializer</Filter>
     </ClCompile>
     <ClCompile Include="Name.cpp">
       <Filter>BaseComponent\Source</Filter>
@@ -304,8 +292,8 @@
     <ClCompile Include="ReflectCheck.cpp">
       <Filter>Reflection\src\04.Helper</Filter>
     </ClCompile>
-    <ClCompile Include="WorldManager.cpp">
-      <Filter>ECS\Source</Filter>
+    <ClCompile Include="Serializer.cpp">
+      <Filter>Serialize</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
