--- a/Fire/GameApplication/imgui.ini
+++ b/Fire/GameApplication/imgui.ini
@@ -12,25 +12,30 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Component]
-Pos=1497,511
-Size=392,477
+ViewportPos=1376,100
+ViewportId=0xD4B39271
+Pos=0,306
+Size=392,304
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][System]
-Pos=348,708
+ViewportPos=348,708
+ViewportId=0xCEE114BD
 Size=1077,244
 Collapsed=0
 
 [Window][Entity]
-Pos=1497,30
-Size=392,479
+ViewportPos=1376,100
+ViewportId=0xD4B39271
+Size=392,304
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-Pos=1497,30
-Size=392,479
+ViewportPos=1376,100
+ViewportId=0xD4B39271
+Size=392,304
 Collapsed=0
 DockId=0x00000002,1
 
@@ -138,7 +143,7 @@ Size=136,90
 Collapsed=0
 
 [Window][SaveSuccesful]
-Pos=119,251
+Pos=118,251
 Size=159,90
 Collapsed=0
 
@@ -175,9 +180,9 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockNode      ID=0x00000004 Pos=1497,53 Size=392,958 Split=Y
+DockNode      ID=0x00000004 Pos=1376,100 Size=392,610 Split=Y
   DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=392,266 Split=Y Selected=0xF57F7DD5
-    DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=392,479 Selected=0xF57F7DD5
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=392,477 Selected=0x31E779E6
+    DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=392,304 Selected=0xF57F7DD5
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=392,304 Selected=0x31E779E6
   DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=392,690
 
