--- a/Fire/RendererModule/RendererModule.vcxproj
+++ b/Fire/RendererModule/RendererModule.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="RendererPCH.h" />
     <ClInclude Include="RendererHeader.h" />
+    <ClInclude Include="RenderingPipeline.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="TextManager.h" />
@@ -200,6 +201,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="RenderingPipeline.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="TextManager.cpp" />
