--- a/Fire/GameApplication/GameApplication.vcxproj.filters
+++ b/Fire/GameApplication/GameApplication.vcxproj.filters
@@ -9,6 +9,9 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
+    <Filter Include="Header\Ma">
+      <UniqueIdentifier>{13303b27-574f-4d9d-9562-6c9a2907630e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
